Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>This blog will serve as a general area to keep track of my progress in the space of software development. Content will include projects I've worked on / am contemplating, as well as note worthy problems I've figured out, and my general thoughts on aspects of programming as I develop my own style and approach. </p>
